# Karty-POS

./: CMakeLists.txt  Client.cpp  DOWNLOAD SCRIPT.bat  Makefile  Server.cpp  Shared.h  color.hpp  shared.h
